# CAA_MiniProjet

./: .gitignore  Cargo.toml  Diagram.txt  Message.txt  readme.md
src/: Client.rs  Server.rs  authenticate_data.rs  client.rs  client_auth.rs  main.rs  message_app.rs  server.rs
