[package]
name = "CAA_MiniProjet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
inquire = "0.7.5"
qr2term = "0.3.3"
thiserror = "2.0.3"
totp-rs = { version = "5.6.0", features = ["otpauth"] }
regex = "1.11.1"
rand = "0.9.0-beta.1"
hex = "0.4.3"
rand_core = "0.6.4"